package edu.fiuba.algo3.ElementosJuego;

public class Sorpresa {
}
